# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\OrderController;
 use App\Http\Controllers\ProductController;
 use App\Http\Controllers\WilayaController;
 use Illuminate\Support\Facades\Route;
@@ -7,3 +8,4 @@ use Illuminate\Support\Facades\Route;
 Route::get('/products', [ProductController::class, 'index']);
 Route::get('/products/{slug}', [ProductController::class, 'show']);
 Route::get('/wilayas', [WilayaController::class, 'index']);
+Route::post('/orders', [OrderController::class, 'store'])->middleware('throttle:5,1');
